--- a/templates/index.html
+++ b/templates/index.html
@@ -82,6 +82,18 @@
                                     <span class="value" id="stockCount">-</span>
                                 </div>
                             </div>
+
+                            <div id="impactContainer" class="impact-panel hidden">
+                                <div class="impact-header">Sentiment Impact</div>
+                                <div id="impactMessage" class="impact-message">-</div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="newsSection" class="news-feed hidden">
+                        <h3>Stock News & Sentiment</h3>
+                        <div id="newsGrid" class="news-grid">
+                            <!-- News will be inserted here -->
                         </div>
                     </div>
 
@@ -103,6 +115,17 @@
                                     <!-- Data rows will be inserted here -->
                                 </tbody>
                             </table>
+                        </div>
+                    </div>
+
+                    <div class="market-news-section glass-panel">
+                        <div class="market-news-header">
+                            <h3>Market News</h3>
+                            <button id="refreshMarketNews" class="btn-secondary"
+                                style="padding: 0.4rem 0.8rem; font-size: 0.8rem;">Refresh</button>
+                        </div>
+                        <div id="marketNewsGrid" class="news-grid">
+                            <!-- Market news will be inserted here -->
                         </div>
                     </div>
                 </div>
